--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 # Example.gitignore files : https://github.com/github/gitignore
 _notes/
 /bower_components/
-/node_modules/
 
 # Logs
 logs
@@ -45,8 +44,8 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
-jspm_packages/
+# node_modules/
+# jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -55,19 +54,19 @@ web_modules/
 *.tsbuildinfo
 
 # Optional npm cache directory
-.npm
+#.npm
 
 # Optional eslint cache
-.eslintcache
+#.eslintcache
 
 # Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
+#.rpt2_cache/
+#.rts2_cache_cjs/
+#.rts2_cache_es/
+#.rts2_cache_umd/
 
 # Optional REPL history
-.node_repl_history
+#.node_repl_history
 
 # Output of 'npm pack'
 *.tgz
@@ -76,12 +75,12 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.test
+#.env
+#.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
+#.cache
+#.parcel-cache
 
 # Next.js build output
 .next
@@ -92,32 +91,32 @@ out
 dist
 
 # Gatsby files
-.cache/
+#.cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
 
 # vuepress build output
-.vuepress/dist
+#.vuepress/dist
 
 # Serverless directories
-.serverless/
+#.serverless/
 
 # FuseBox cache
-.fusebox/
+#.fusebox/
 
 # DynamoDB Local files
-.dynamodb/
+#.dynamodb/
 
 # TernJS port file
-.tern-port
+#.tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
 # yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
+#.yarn/cache
+#.yarn/unplugged
+#.yarn/build-state.yml
+#.yarn/install-state.gz
+#.pnp.*
